<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_a"
                />
            <Button
                android:id="@+id/button_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_b" />

            <Button
                android:id="@+id/button_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_c"
                />

            <Button
                android:id="@+id/button_d"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_d"
                />
            <Button
                android:id="@+id/button_e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_e"
                />

            <Button
                android:id="@+id/button_f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_f"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_g"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_g"
                />

            <Button
                android:id="@+id/button_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_h"
                />

            <Button
                android:id="@+id/button_i"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_i"
                />
            <Button
                android:id="@+id/button_j"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_j"
                />
            <Button
                android:id="@+id/button_k"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_k"
                />
            <Button
                android:id="@+id/button_l"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_l"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_m"
                />

            <Button
                android:id="@+id/button_n"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_n"
                />

            <Button
                android:id="@+id/button_o"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_o"
                />

            <Button
                android:id="@+id/button_p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_p"
                />

            <Button
                android:id="@+id/button_q"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_q"
                />

            <Button
                android:id="@+id/button_r"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_r"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_s"
                />

            <Button
                android:id="@+id/button_t"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_t"
                />

            <Button
                android:id="@+id/button_u"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_u"
                />

            <Button
                android:id="@+id/button_v"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_v"
                />

            <Button
                android:id="@+id/button_w"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_w"
                />

            <Button
                android:id="@+id/button_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_x"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/button_enter"/>

            <Button
                android:id="@+id/button_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_y"
                />

            <Button
                android:id="@+id/button_z"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/letter_z"
                />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/dark_theme_btn_bg"
                android:textColor="@color/dark_theme_btn_txt"
                android:text="@string/button_delete"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
